# tirapari

./: README.md  plugin_test.py  pyproject.toml  setup.py
.history/src/: requirements_20260511153919.txt  requirements_20260511153930.txt  requirements_20260511153937.txt
.history/src/myopari/: _segmentation_widget_20260508161807.py  _segmentation_widget_20260511154051.py  _segmentation_widget_20260511154052.py  _segmentation_widget_20260511154055.py  _segmentation_widget_20260511154057.py  _segmentation_widget_20260511154103.py
.history/src/myopari/processors/: SEGProcessor_20260508162528.py  SEGProcessor_20260511120243.py  SEGProcessor_20260511120247.py  SEGProcessor_20260511120257.py  SEGProcessor_20260511120307.py  SEGProcessor_20260511120315.py  SEGProcessor_20260511120324.py  SEGProcessor_20260511120328.py  SEGProcessor_20260511120331.py  SEGProcessor_20260511120332.py  SEGProcessor_20260511120334.py  SEGProcessor_20260511120338.py  SEGProcessor_20260511120340.py  SEGProcessor_20260511120400.py  SEGProcessor_20260511120550.py  SEGProcessor_20260511120558.py  SEGProcessor_20260511120602.py  SEGProcessor_20260511120623.py  SEGProcessor_20260511120625.py  SEGProcessor_20260511120654.py  SEGProcessor_20260511120716.py  SEGProcessor_20260511120720.py  SEGProcessor_20260511120721.py  (+86 more)
src/: requirements.txt
src/myopari/: __init__.py  _segmentation_widget.py  napari.yaml
src/myopari/processors/: __init__.py
src/tirapari/: __init__.py  _sample_data.py  _segmentation.py  _widget.py  napari.yaml
tests/: test_segmentation.py  test_widget.py
